--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,8 +14,8 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.TOKEN }}
         with:
-          source-directory: '.'
-          target-directory: 'api'
+          source-directory: '/.'
+          target-directory: '/api'
           destination-github-username: 'bryanz994'
           destination-repository-name: 'neo4j_enigma'
           target-branch: main
