--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.TOKEN }}
         with:
-          source-directory: '/.'
+          source-directory: .
           target-directory: 'api'
           destination-github-username: 'bryanz994'
           destination-repository-name: 'neo4j_enigma'
