--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ jobs:
         uses: andstor/copycat-action@v3
         with:
           personal_token: ${{ secrets.TOKEN }}
-          src_path: /.
+          src_path: .
           dst_path: /api
           dst_owner: bryanz994
           dst_repo_name: neo4j_enigma
